--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
-h1 {
-    color: black;
-}
+body {
+    font-family:'Times New Roman', Times, serif;
+    margin: 0;
+  }
+  
+  input,
+  button {
+    margin: 5px;
+    padding: 10px;
+    font-size: 16px;
+  }
+  
+  button {
+    cursor: pointer;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  li {
+    cursor: pointer;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid black;
+    border-radius: 4px;
+  }
+  
+  .purchased {
+    text-decoration: line-through;
+    background-color: black;
+  }
